[package]
name = "dashium"
version = "0.1.0"
edition = "2024"
description = "A Geometry Dash Private Server written in Rust"

[workspace]
members = ["gd_response_derive"]
resolver = "2"

[dependencies]
gd_response_derive = { path = "./gd_response_derive" }
axum = "0.8.4"
anyhow = "1.0"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha1 = "0.10.6"
tower-http = { version = "0.6.6", features = ["trace"] }
argon2 = "0.5.3"
