[package]
name = "dashium"
version = "0.1.0"
edition = "2024"
description = "A Geometry Dash Private Server written in Rust"

[workspace]
resolver = "3"
members = ["gd", "api"]

[dependencies]
api = { path = "api" }
gd = { path = "gd" }
axum = "0.8.4"
anyhow = "1.0"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
