[package]
name = "dashium"
version = "0.1.0"
edition = "2024"
description = "A Geometry Dash Private Server written in Rust"

[workspace]
resolver = "3"
members = ["dashium-core", "dashium-api"]

[[bin]]
name = "dashium"
path = "dashium/main.rs"

[dependencies]
dashium-api = { path = "dashium-api" }
dashium-core = { path = "dashium-core" }
axum = "0.8.4"
anyhow = "1.0"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tower_governor = { version = "0.7.0", features = ["tracing"] }
