[package]
name = "api"
edition = "2024"

[dependencies]
gd = { path = "../gd" }
axum = "0.8.4"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
