[package]
name = "dashium-api"
edition = "2024"
version = "0.1.0"

[dependencies]
dashium-core = { path = "../dashium-core" }
axum = "0.8.4"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
