[package]
name = "dashium-core"
edition = "2024"
version = "0.1.0"

[dependencies]
axum = "0.8.4"
anyhow = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-humanize = "0.2.3"
base64 = "0.22.1"
serde_html_form = "0.2.7"
